--- a/package.json
+++ b/package.json
@@ -1,18 +1,12 @@
 {
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
-    "express": "^4.18.0",
-    "mongoose": "^6.3.1",
-    "nodemon": "^2.0.15",
-    "uuid": "^8.3.2"
-  },
-  "scripts": {
-    "start": "node server.js"
-  },
   "name": "g02-node-project",
   "version": "1.0.0",
+  "description": "",
   "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/PNC-NODE-PROJECT/G02-NODE-PROJECT.git"
@@ -24,5 +18,11 @@
     "url": "https://github.com/PNC-NODE-PROJECT/G02-NODE-PROJECT/issues"
   },
   "homepage": "https://github.com/PNC-NODE-PROJECT/G02-NODE-PROJECT#readme",
-  "description": ""
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.18.0",
+    "mongoose": "^6.3.1",
+    "nodemon": "^2.0.15"
+  }
 }
